--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "cognitive-services",
+    "azure",
+    "face-api",
+    "javascript"
+  ],
+  "author": "Marco Antônio",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
