--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/cognitiveservices-face": "^4.2.0",
+    "@azure/ms-rest-js": "^2.5.2",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
